# kalmangrad

./: .gitignore  CITATION.cff  LICENSE  README.md  diagnostics.py  kalman_filter.py  pyproject.toml  visualize.py
docs/: appendices.md  derivation.md  methodology.md
examples/: 01_1d_position_tracking.py  02_2d_constant_velocity.py  03_filter_divergence_detection.py  04_diagnostic_instrumentation.py  _logging.py
tests/: __init__.py  test_diagnostics.py  test_kalman_filter.py  test_visualize.py
