[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalmangrad"
version = "0.1.0.dev0"
description = "Kalman filtering from scratch: derivation, reference implementation, diagnostic instrumentation."
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jesse Moses", email = "jesse@bytestacklabs.com"},
]
maintainers = [
    {name = "Jesse Moses", email = "jesse@bytestacklabs.com"},
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "mypy>=1.5",
]
docs = [
    "matplotlib>=3.7",
    "jupyter>=1.0",
]
all = [
    "kalmangrad[viz,dev,docs]",
]

[tool.setuptools]
py-modules = ["kalman_filter", "diagnostics", "visualize"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["kalman_filter", "diagnostics", "visualize"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific
    "NPY", # numpy
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "S101",   # Use of assert detected (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]
"examples/*" = ["ANN", "E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true
